<resources>
    <string name="app_name">Password Manager</string>
    <string name="title">Password Manager</string>
    <string name="length_label">Length: %1$d</string>
    <string name="use_uppercase">Uppercase letters</string>
    <string name="use_numbers">Numbers</string>
    <string name="use_special_chars">Special characters</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="add_password">Add Password</string>
    <string name="register">Register</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="back">Back</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Enter Title</string>
    <string name="edit_password">Enter Password</string>
</resources>