<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorBackground"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_title"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/title_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_a_title"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/title_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_password"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/title_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_a_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/password_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/register_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/colorSecondaryLight"
                    app:layout_constraintTop_toBottomOf="@id/password_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:strokeColor="@color/colorSecondaryLight" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>