<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorBackground"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <SeekBar
                    android:id="@+id/passwordLengthSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="32"
                    android:progress="12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/passwordLengthLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length_label"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLengthSeekBar" />

                <CheckBox
                    android:id="@+id/uppercaseOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_uppercase"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLengthLabel" />

                <CheckBox
                    android:id="@+id/numbersOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_numbers"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/uppercaseOption" />

                <CheckBox
                    android:id="@+id/specialCharsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_special_chars"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numbersOption" />

                <Button
                    android:id="@+id/generatePasswordButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/generate_password"
                    android:textColor="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/specialCharsOption"
                    app:strokeColor="@color/colorSecondaryLight" />

                <Button
                    android:id="@+id/copyPasswordButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/copy"
                    android:textColor="@color/colorSecondaryLight"
                    app:layout_constraintBottom_toBottomOf="@id/generatePasswordButton"
                    app:layout_constraintStart_toEndOf="@id/generatePasswordButton"
                    app:layout_constraintTop_toTopOf="@id/generatePasswordButton"
                    app:strokeColor="@color/colorSecondaryLight" />

                <TextView
                    android:id="@+id/generatedPasswordView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/textColorLight"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/generatePasswordButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
